<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue=" "
        android:inputType="textUri"
        android:key="@string/pref_server_url_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_url" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_server_protocol_values"
        android:entryValues="@array/pref_server_protocol_values"
        android:key="@string/pref_server_protocol_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_server_protocol" />

    <EditTextPreference
        android:defaultValue=" "
        android:inputType="text"
        android:key="@string/pref_server_username_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_username" />

    <EditTextPreference
        android:defaultValue=" "
        android:inputType="textPassword"
        android:key="@string/pref_server_password_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_password" />

    <EditTextPreference
        android:defaultValue=" "
        android:inputType="text"
        android:key="@string/pref_server_download_folder_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_download_folder" />

    <EditTextPreference
        android:defaultValue=" "
        android:inputType="textLongMessage"
        android:key="@string/pref_server_api_info_key"
        android:maxLines="2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_server_api_info" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_server_task_creation_method_values"
        android:entryValues="@array/pref_server_task_creation_method_values"
        android:key="@string/pref_server_task_creation_method_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_server_task_creation_method" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_server_torrent_url_type_values"
        android:entryValues="@array/pref_server_torrent_url_type_values"
        android:key="@string/pref_server_torrent_url_type_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_server_torrent_url_type" />

</PreferenceScreen>
