<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="android.gawa.androiddownloadhelper.SettingsActivity$ApiPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_torrent_api" />

    <header
        android:fragment="android.gawa.androiddownloadhelper.SettingsActivity$FilterPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_filter" />

    <header
        android:fragment="android.gawa.androiddownloadhelper.SettingsActivity$ServerPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_server" />

    <header
        android:fragment="android.gawa.androiddownloadhelper.SettingsActivity$OtherPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_other" />

</preference-headers>
